--- a/themes/default.styl
+++ b/themes/default.styl
@@ -18,13 +18,12 @@
 
         .react-selectize-selected-values
             padding-left 5px
-        
+    
     &.open
 
         &.flipped
 
             .react-selectize-control
-                border-top none
                 border-bottom-left-radius 4px
                 border-bottom-right-radius 4px
                 border-top-left-radius 0px
@@ -33,7 +32,6 @@
         &:not(.flipped)
             
             .react-selectize-control
-                border-bottom none
                 border-bottom-left-radius 0px
                 border-bottom-right-radius 0px
                 border-top-left-radius 4px
@@ -81,6 +79,7 @@
 .react-selectize.dropdown-menu.default
     background white
     border 1px solid #ccc
+    margin-top -1px
 
     &.flipped
         border-top-left-radius 4px
@@ -91,6 +90,7 @@
         border-bottom-left-radius 4px
         border-bottom-right-radius 4px
     
+
     .no-results-found
         color #aaa !important
         font-style oblique
